KLINK-35: edit/update functionality implemented on rest, wired in web client
