# klink-rest/src/main/java/com/drbrosdev/klinkrest/domain/KlinkDomainService.java
@@ -12,4 +12,7 @@ public interface KlinkDomainService {
 
     void deleteKlink(UUID klinkId);
 
+    KlinkDto updateKlink(
+            UUID klinkId,
+            KlinkDto klink);
 }
